# dotfiles

./: .gitignore  README.md  install.py
doom-emacs/: config.org  init.el
emacs/: init.el  init.org  tangled_init.el
fish/: config.fish
fish/functions/: fish_prompt.fish
git/: gitconfig
nix/: config.nix
nix/overlays/: default.nix
nvim/: init.vim
old/zsh/: zshrc.local  zshrc_mini
scripts/: backup.sh
tmux/: tmux.conf
vim/: README.md  vimrc
xmonad/: LICENSE  README.md  default.nix  mywm.cabal  mywm.desktop  mywm.nix  stack.yaml
xmonad/src/: KeyBindings.hs  Main.hs
zsh/: .zshrc  update.sh  zshrc.local  zshrc_mini
